EQEMu Changelog (Started on Sept 24, 2003 15:50)
-------------------------------------------------------
==03/23/2011==
JJ: (Danyelle) Face fix for Iksar Beastlord pet.

==03/21/2011==
JJ: (Jaekob/Danyelle) Texture fix for Iksar Beastlord pet.

==03/11/2011==
Trevius: Skill caps now use the MaxLevel rule for deciding max level of skill caps instead of being hard capped at level 75.
Trevius: All spells can be blocked in a zone by setting a spell id of 0 in the blocked_spells table.
Trevius: If a zone has all spells blocked by setting spell id 0 in blocked_spells, any additional spells added for that zone will become exceptions and be allowed.
Trevius: Reverted Sorvani's swarm pet change from Rev1872 due to some bugs it caused for normal pets.

==02/24/2011==
Trevius: Power Source slot can now be augmented.
Trevius: Corrected spell formula 122 (Splurt) and implemented the reverse splurt (Ex. Corath Venom) where damage reduces each tic.

==02/22/2011==
gaeorn: (sorvani) fix to make swarm pets not be targetable as NPCs

==02/19/2011==
Trevius: Added variable export $slotid to EVENT_ITEM_CLICK and EVENT_ITEM_CLICK_CAST, which exports the slot id of the item that triggered the event.

==02/18/2011==
Trevius: Fixed a potential crash in TrySpellOnKill().
Derision: Underfoot: Bard instrument modifiers now show (as focus effects) in the item stats window.
Derision: Allowed fishing in 'VWater' (Region type 7) on the basis this is the only type of water in Sleeper and you can apparently fish there.

==02/17/2011==
Derision: Fixed bug in GetZoneForage where generally only the first three zone specific items could actually be foraged.
gaeorn: (sorvani) fix for bard pacify songs

==02/13/2011==
Trevius: Finalized implementation of Item Faction Mods.  The bonuses now remove if the item is unequiped.
Trevius: Added Rule Character::ItemCastsUseFocus - If true, this allows item clickies to use focuses that have limited max levels on them